--- a/requerimientos/rfuncionales.tex
+++ b/requerimientos/rfuncionales.tex
@@ -1,4 +1,44 @@
 \section{Requerimientos funcionales}
 
 
-A continuación, se presenta la lista correspondiente a los requerimientos funcionales del sistema. Asignándole a cada requerimiento un identificador, un nombre y una breve descripción.
+A continuación, se presenta la lista correspondiente a los requerimientos funcionales del sistema. Asignándole a cada requerimiento un identificador, un nombre y una breve descripción.\\
+
+
+\textbf{RF1 \hspace{2cm}Tipo de sistema}\\
+El sistema es una aplicación de escritorio que se ejecuta sin alguna dependencia externa de otro equipo de cómputo o conexión a internet.\\
+
+\textbf{RF2 \hspace{2cm}Sistema Operativo}\\
+La aplicación debe ejecutarse sobre el sistema operativo Windows 10.\\
+
+\textbf{RF3 \hspace{2cm}Selección de operación primaria}\\
+El sistema debe mostrar una opción de visualizar alumnos y otra de insertar alumnos al inicio de la aplicación.\\
+
+\textbf{RF4 \hspace{2cm}Registrar Alumno}\\
+El sistema debe permitir al profesor registrar nuevos alumnos a su lista. Los datos que se deben proporcionar son:
+\begin{itemize}
+	\item Nombre o Nombres
+	\item Primer apellido
+	\item Segundo apellido \textit{(opcional)}
+	\item Matricula
+\end{itemize}
+Siendo el Segundo apellido el campo opcional. De la misma forma de aceptar el ingreso de cualquier caracter para nombres y apellidos\\
+
+\textbf{RF5 \hspace{2cm}Editar Alumno}\\
+El sistema debe permitir al profesor modificar cualquier dato de algún alumno que se encuentre inscrito\\
+
+\textbf{RF6 \hspace{2cm}Eliminar Alumno}\\
+El sistema debe permitir al profesor eliminar cualquier alumno que se encuentre registrado\\
+
+\textbf{RF7 \hspace{2cm}Validar Matrículas}\\
+El sistema no debe permitir la existencia de dos matrículas iguales\\
+
+\textbf{RF4 \hspace{2cm}Sin existencia de Alumnos}\\
+El sistema debe notificar cuando no haya registros y se quiera eliminar un alumno\\
+
+
+
+
+
+
+
+
