Historias de usuario terminadas. Entrega 24 03

--- a/index.tex
+++ b/index.tex
@@ -33,4 +33,5 @@
 	\input{introduccion}
 	\input{./arquitectura/vescenarios}
 	\input{./requerimientos/Requerimentos}
+	\input{./HistoriasUsuario/historiasdeusuario}
 \end{document}
